--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@vueuse/core": "^13.1.0",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2",
     "swiper": "^11.2.6",
