--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/core": "^13.1.0",
+    "axios": "^1.8.4",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2",
     "swiper": "^11.2.6",
